--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@
 }
 body {
    margin: 0;
-   padding: 0;
    font-family: 'Spartan', sans-serif;
    font-size: 12px;
-   height: 100vh;
    position: relative;
-   /* overflow: hidden; */
+}
+.container {
+   width: 1440px;
+   max-width: 100%;
+   height: 100%;
+   margin: 0 auto;
 }
 
 nav {
@@ -69,14 +72,14 @@ a:hover:before {
    position: relative;
 }
 .flex__image {
-   flex: 0.635;
+   flex: 0.63;
 }
 .flex__image img {
    width: 100%;
    height: 100%;
 }
 .splide__slide .description {
-   margin: 140px;
+   margin: 100px;
    height: 100%;
 }
 .splide__slide .description .shop_btn {
@@ -98,7 +101,7 @@ a:hover:before {
    width: 35px;
 }
 .splide__slide .description h1 {
-   font-size: 45px;
+   font-size: 35px;
    font-weight: 600;
 }
 .splide__slide .description p {
@@ -108,7 +111,7 @@ a:hover:before {
    line-height: 25px;
 }
 .flex__image .btn {
-   /* display: none; */
+   display: none;
 
    z-index: -2;
 }
@@ -123,8 +126,8 @@ a:hover:before {
 .btn button {
    background-color: transparent;
    border: none;
-   width: 100px;
-   height: 100px;
+   width: 80px;
+   height: 80px;
 }
 .btn button:hover {
    background-color: hsl(0, 0%, 27%);
@@ -175,26 +178,13 @@ section img {
       font-size: 25px;
    }
 
-   .flex__image .btn button {
-      width: 60px;
-      height: 60px;
-   }
-   .flex__image {
-      position: relative;
-   }
    .flex .btn {
-      display: none;
-   }
-   .flex__image .btn {
       position: absolute;
       right: 0;
-      bottom: 0;
+      top: -80px;
+      bottom: auto;
       left: auto;
       z-index: 1;
-   }
-   .btn button img {
-      width: 15px;
-      height: 15px;
    }
 
    section {
